fix: code on active line shows white brackets and commas which blends them into background like they are not there

--- a/packages/esdoc-publish-html-plugin/src/html-template/css/style.css
+++ b/packages/esdoc-publish-html-plugin/src/html-template/css/style.css
@@ -599,7 +599,7 @@ pre.source-code.line-number li.error-line {
 .inner-link-active {
   /*background: rgb(255, 255, 150) !important;*/
   background: #039BE5 !important;
-  color: #fff !important;
+  /*color: #fff !important;*/
   padding-left: 0.1em !important;
 }
 
