--- a/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/test.ejs
+++ b/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/test.ejs
@@ -1,20 +1,31 @@
 <% include(`${template.rootDirectory}/utils`); _%>
 <!-- test.ejs -->
-<%_ function renderTestCase(test, depth = 0) { _%>
+<% function renderTestCase(test, depth = 0)
+{ -%>
   <tr class="test-interface" data-ice="testInterface" data-test-depth="<%= depth %>">
-    <td data-ice="testDescription" style="padding-left: <%- 10 * (depth + 1) %>px"><% if(test.children && test.children.length > 0) { %><span data-ice="testInterfaceToggle" class="toggle closed"></span><% }//if %><span><%- renderLink(test.description) %></span></td>
-    <td data-ice="testTarget" class="test-target">
-      <%_ for(const target of test.targets) { _%>
-        <span><% renderLink(target) %></span>
-      <%_ }//for _%>
+    <td data-ice="testDescription" style="padding-left: <%= 10 * (depth + 1) %>px">
+      <%
+      if(test.children && test.children.length > 0)
+      {
+        %><span data-ice="testInterfaceToggle" class="toggle closed"></span><%
+      }//if
+      %><span><%- renderLink(test.description) %></span>
     </td>
-  </tr>
-  <%_ if(test.children && test.children.length > 0) { _%>
-    <%_ for(const child of test.children) { _%>
-      <%- renderTestCase(child, depth+1); _%>
-    <%_ }//for %>
-  <%_ }//if _%>
-<%_ }//renderTestCase _%>
+    <td data-ice="testTarget" class="test-target">
+      <%
+      for(const target of test.targets) {
+        %><span><% renderLink(target) %></span><%
+      }//for %>
+    </td>
+  </tr><%
+
+  if(test.children && test.children.length > 0)
+  {
+    for(const child of test.children) {
+      %><%- renderTestCase(child, depth+1); %><%
+    }//for 
+  }//if
+}//renderTestCase -%>
 <h1>Test</h1>
 <table class="test-summary">
   <thead>
@@ -23,13 +34,15 @@
       <td class="test-target">Identifier</td>
     </tr>
   </thead>
-  
   <tbody data-ice="tests">
-    <%_ if(tests && tests.length > 1) { _%>
-      <%_ for(const test of tests) { _%>
-        <%_ renderTestCase(test); _%>
-      <%_ }//for _%>
-    <%_ }//if _%>
+    <%
+    if(tests && tests.length > 1)
+    {
+      for(const test of tests)
+      {
+        %><%- renderTestCase(test); %><%
+      }//for
+    }//if %>
   </tbody>
 </table>
 <!-- test.ejs end -->
