--- a/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/testInterface.ejs
+++ b/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/testInterface.ejs
@@ -1,6 +1,10 @@
 <!-- testInterface.ejs -->
 <tr class="test-interface" data-ice="testInterface" style="display: none;">
-  <td data-ice="testDescription"><span data-ice="testInterfaceToggle" class="toggle closed"></span></td>
-  <td data-ice="testTarget" class="test-target"></td>
+  <td data-ice="testDescription">
+    <span data-ice="testInterfaceToggle" class="toggle closed"></span>
+  </td>
+  <td data-ice="testTarget" class="test-target">
+
+  </td>
 </tr>
 <!-- testInterface.ejs end -->
