--- a/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/single.ejs
+++ b/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/single.ejs
@@ -1,11 +1,25 @@
 <!-- single.ejs -->
 <h1 data-ice="title"><%= title || '' %></h1>
-<%_ if(summariesData?.length > 0) { -%>
-  <%_ for(const summaryData of summariesData) { -%><div data-ice="summaries"><%- include(`${template.rootDirectory}/summary.ejs`, summaryData); %></div><% }//for -%>
-<%_ }//if -%>
-<% if(detailsData?.length > 0) { %>
-  <div data-ice="details">
-    <% for(const detailData of detailsData) { %><%- include(`${template.rootDirectory}/details.ejs`, {data: detailData}) %><% }//for -%>
+<%
+if(summariesData?.length > 0)
+{
+  for(const summaryData of summariesData)
+  {
+    %><div data-ice="summaries">
+      <%- include(`${template.rootDirectory}/summary.ejs`, summaryData); %>
+    </div><%
+  }//for
+}//if
+if(detailsData?.length > 0)
+{
+  %><div data-ice="details">
+    <% for(const detailData of detailsData)
+    {
+      %><%- include(`${template.rootDirectory}/details.ejs`, {data: detailData}) %><%
+    }//for
+    %>
   </div>
-<% }//if -%>
+<%
+}//if
+%>
 <!-- single.ejs end -->
