--- a/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/properties.ejs
+++ b/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/properties.ejs
@@ -1,31 +1,54 @@
-<% include(`${template.rootDirectory}/utils`); _%>
+<% include(`${template.rootDirectory}/utils`); -%>
 <!-- properties.ejs -->
 <div data-ice="properties">
-  <%_ if(title) { _%><h4 data-ice="title"><%= title %></h4><%_ }//if(title) _%>
-  <table class="params">
+  <%
+  if(title)
+  {
+    %><h4 data-ice="title"><%= title %></h4>
+    <%
+  }
+  %><table class="params">
     <thead>
-      <tr><td>Name</td><td>Type</td><td>Attribute</td><td>Description</td></tr>
+      <tr>
+        <td>Name</td>
+        <td>Type</td>
+        <td>Attribute</td>
+        <td>Description</td>
+      </tr>
     </thead>
     <tbody>
-    <%_ for(const prop of properties) { _%>
-      <tr data-ice="property" data-depth="<%= (prop.name.split('.') - 1) %>">
+      <% for(const prop of properties)
+      { %><tr data-ice="property" data-depth="<%= (prop.name.split('.') - 1) %>">
         <td data-ice="name" class="code" data-depth="<%= (prop.name.split('.') - 1) %>"><%= prop.name %></td>
-        <td data-ice="type" class="code"><%_
-          for(const typeLink of prop.typesLinks) { %>
-            <%- renderLink(cls.typeLink) %>
-          <% }//for
-        _%></td>
-        <td data-ice="appendix"><%_
-          if(prop.optional || prop.hasDefaultValue || prop.nullable) {
-            _%><ul><%_ if(prop.optional) { _%><li>optional</li><%_ }//if(prop.optional)
-             if(prop.hasDefaultValue) { _%><li>default: <%= prop.defaultValue %></li><%_ }//if(prop.hasDefaultValue)
-             if(prop.nullable) { _%><li>nullable: true</li><%_ }//if(prop.nullable)
-            _%></ul><%_
-          }//if(prop.optional || prop.hasDefaultValue || prop.nullable)
-        _%></td>
+        <td data-ice="type" class="code"><%
+          for(const typeLink of prop.typesLinks)
+          { %><%- renderLink(cls.typeLink) %><%
+          } %>
+        </td>
+        <td data-ice="appendix"><%
+          if(prop.optional || prop.hasDefaultValue || prop.nullable)
+          { %>
+            <ul><% if(prop.optional)
+            {
+              %>
+              <li>optional</li><%
+            }
+            if(prop.hasDefaultValue)
+            {
+              %>
+              <li>default: <%= prop.defaultValue %></li><%
+            }
+            if(prop.nullable)
+            {
+              %>
+              <li>nullable: true</li><%
+            }
+          }//if %>
+          </ul>
+        </td>
         <td data-ice="description"><%= prop.description %></td>
-      </tr>
-    <%_ }//for _%>
+      </tr><%
+      }//for %>
     </tbody>
   </table>
 </div>
