--- a/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/manualCardIndex.ejs
+++ b/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/manualCardIndex.ejs
@@ -1,18 +1,30 @@
+<% include(`${template.rootDirectory}/utils`); -%>
 <!-- manualCardIndex.ejs -->
 <div>
-  <% if(manualUserIndex) { %><div data-ice="manualUserIndex"><%- manualUserIndex %></div><% }//if %>
-  
-  <% if(manualBadge) { %><p data-ice="manualBadge"><img src="./manual-badge.svg"/></p><% }//if %>
-
+  <%
+  if(manualUserIndex)
+  {
+    %><div data-ice="manualUserIndex">
+      <%- manualUserIndex %>
+    </div>
+  <%
+  }//if
+  if(manualBadge)
+  {
+    %><p data-ice="manualBadge"><img src="./manual-badge.svg"/></p><%
+  }//if
+  %>
   <div>
     <div data-ice="cards">
-      <% for(const card of cards) { %>
-      <div>
-        <%#- utils.var_dump(card) %>
-        <div data-ice="card"><%- card.card %></div>
-        <a href="<%= card.link.href %>" data-ice="link"></a>
-      </div>
-      <% }//for %>
+      <%
+      for(const card of cards)
+      {
+        %><div><%#- utils.var_dump(card) _%>
+          <div data-ice="card"><%- card.card %></div><%- renderLink(card.link); %>
+        </div>
+        <%
+      }//for
+      %>
     </div>
   </div>
 </div>
